Add new ShopForm for product purchasing and update related database views and procedures
- Created ShopForm and its designer file for handling product purchases.
- Added functionality to load product data and handle purchases in ShopForm.cs.
- Updated Database class to include methods for retrieving product details and processing purchases.
- Modified existing views and stored procedures to accommodate new product image and details.
- Updated InfoProcessForm to display deceased images and handle image uploads.
- Enhanced MainPage to include product images in the data grid.
- Added a new view vw_LoadProcess to streamline process data retrieval.
- Removed unused functions and triggers to clean up the database schema.

Co-authored-by: Duarte Santos <Duarters07@users.noreply.github.com>

--- a/ui/funeraria/funeraria.csproj
+++ b/ui/funeraria/funeraria.csproj
@@ -114,6 +114,12 @@
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\Program.cs" />
+    <Compile Include="Forms\ShopForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ShopForm.Designer.cs">
+      <DependentUpon>ShopForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\CemeteryForm.resx">
       <DependentUpon>CemeteryForm.cs</DependentUpon>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RegisterForm.resx">
       <DependentUpon>RegisterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ShopForm.resx">
+      <DependentUpon>ShopForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
